fixed overflowing spot description text, and changed css in spotform to not have a max height of 600, that was preventing the new scroll to top of page on error from not working

--- a/frontend/src/components/styles/SpotForm.css
+++ b/frontend/src/components/styles/SpotForm.css
@@ -1,7 +1,7 @@
 /* CSS for both the create spot form and update spot form */
 .spotForm {
   max-width: 400px;
-  max-height: 600px;
+  /* max-height: 600px; */
   overflow-y: auto;
   margin: 0 auto;
   padding: 20px;
@@ -106,6 +106,12 @@ textarea {
 
 .description-field {
   height: 130px;
+}
+
+.spotDescription {
+  word-wrap: break-word;
+  max-width: 100%;
+  white-space: normal; /* Ensures normal text wrapping */
 }
 
 .section-line-above {
